Support parallax origin map property
We don't want to expose all the Tiled specific stuff like `editorsettings` on the LITIENGINE API but still the serialization layer should keep the information.

#464